strip the dates from the section titles

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -6,7 +6,7 @@
 
 \todo[inline]{I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.}
 
-\oldsection{$E_\infty$ geometry}
+\section{$E_\infty$ geometry}
 
 \Cref{OrdinaryHomologyInUpperHalfPlaneEx} is an inspiration for considering $\tmf$ as well.
 
@@ -26,7 +26,7 @@ The Bousfield--Kuhn functor and the Rezk logarithm
 
 
 
-\oldsection{Rational phenomena: character theory for Lubin--Tate spectra}
+\section{Rational phenomena: character theory for Lubin--Tate spectra}
 
 There's a sufficient amount of reliance on character theory in Matt's thesis that we should talk about it.  You should write that action and then backtrack here to see what you need for it.
 
