todo about the skew field spectrum claim

--- a/finite.tex
+++ b/finite.tex
@@ -809,6 +809,7 @@ A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$ for any $X$
 \end{proof}
 
 As another example of the primacy of these methods, we can show the following interesting result.  Say that $R$ is a field spectrum when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  It is easy to check (as mentioned in the proof above) that $K(d)$ is an example of such a spectrum.
+\todo{This might require some care. You've been talking about $K(d)P$ mostly. Why is this the right thing to switch to? If you restrict attention to $2$--periodic field spectra, can you use $K(d)P$ instead?}
 
 \begin{corollary}\label{FieldSpectraAreKTheories}
 Every field spectrum $R$ splits as a wedge of Morava's $K(d)$ theories.
