--- a/intro.tex
+++ b/intro.tex
@@ -3,7 +3,7 @@
 \setcounter{chapter}{-1}
 \chapter{Introduction}
 
-\section{Introduction}\label{IntroductionSection}
+\label{IntroductionSection}
 
 The goal of this class is to communicate a certain \textit{weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for today is to tell a story about one theorem where it is especially apparent.
 
@@ -43,7 +43,7 @@ The integer obtained by the above process is $\int_M \omega$. \qed
 
 Now take $G = e$ to be the trivial structure group, which is the bordism theory of manifolds with trivialized tangent bundle.  In this case, the Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, at what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  In the more general case, the map $SO \to O$ is the beginning of the Postnikov filtration of $O$, \todo{danny: do you mean postnikov filtration for $MO$? I asked this in class but I think it's good to say how does the filtration go. The classical postnikov filtration for $X$ builds the homotopy groups of $X$ up from the bottom, to get a sequence $\cdots \to X_2 \to X_1 \to X_0$, with $X$ the limit. I think the situation here is the opposite? We'll talk about this.} and we now present a diagram of this filtration and some interesting integration theories related to it:
+Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, at what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $SO \to O$ as the $0${\th} Postnikov truncation of $O$\todo{Danny asks: do you mean Postnikov or Whitehead?}, we are inspired to consider the rest of the Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting integration theories related to it:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrd} \arrow{rrrd} \arrow{rrrrd} & \cdots \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & MSO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
