various cleanups, suggestions, etc.

--- a/mo.tex
+++ b/mo.tex
@@ -176,11 +176,11 @@ The functor $\mathbb A^1$ introduced above is naturally valued in groups: since 
 \end{example}
 
 \begin{remark}
-In fact, $\mathbb A^1$ is naturally valued in \emph{rings}. It models the inverse functor to $\Spec$ in the equivalence of categories above, i.e., the elements of a ring $R$ always form a complete collection of $\A^1$--valued functions on some affine scheme $\Spec R$ \todo{We haven't defined $\A^1$ at this point yet -danny}\todo{re:danny. Should this just be $\mathbb A^1$?}.
+In fact, $\mathbb A^1$ is naturally valued in \emph{rings}. It models the inverse functor to $\Spec$ in the equivalence of categories above, i.e., the elements of a ring $R$ always form a complete collection of $\mathbb A^1$--valued functions on some affine scheme $\Spec R$.
 \end{remark}
 
 \begin{example}
-We define the \textit{multiplicative group scheme} by\todo{Do you want this to be a $\Z$--algebra? Ditto with $\mathbb A^1$ and $\mathbb G_a$?} \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
+We define the \textit{multiplicative group scheme} by\todo{Do you want this to be a $\Z$--algebra? Ditto with $\mathbb A^1$ and $\mathbb G_a$? re; I don't think so, since we're just doing everything over $F_2$, but Eric could you check? AY} \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
 \begin{align*}
 \mathbb G_m \times \mathbb G_m & \xrightarrow{\mu} \mathbb G_m & x_1 \otimes x_2 & \mapsfrom x \\
 & & y_1 \otimes y_2 & \mapsfrom y, \\
@@ -194,7 +194,7 @@ As presented above, the multiplicative group comes with a natural inclusion $\ma
 \end{remark}
 
 \begin{example}[{cf.\ \Cref{WorkedAlpha2Example}}]\label{Alpha2Example}
-The following example shows that it is a bad idea to think of affine group schemes as a schemeified version of linear lie groups.  Define the group scheme $\alpha_2$ to be $\mathrm{Spec}(\mathbb{F}_2[x]/(x^2))$ with group scheme structure given by
+The following example shows that it is a bad idea to think of affine group schemes as a scheme-ified version of linear Lie groups.  Define the group scheme $\alpha_2$ to be $\mathrm{Spec}(\mathbb{F}_2[x]/(x^2))$ with group scheme structure given by
 \begin{align*}
 \alpha_2 \times \alpha_2 &\xrightarrow{\mu} \alpha_2 & x_1 + x_2 & \mapsfrom x, \\
 \alpha_2 & \xrightarrow{\chi} \alpha_2 & -x & \mapsfrom x, \\
