--- a/finite.tex
+++ b/finite.tex
@@ -831,10 +831,10 @@ This is interesting in its own right, because field spectra are exactly those sp
 
 \section{Periodicity in finite spectra}
 
-We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
+We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories. \todo{might suggest introducing a notation for (finite) p-local spectra? And say that $\S$ means the $p$-local sphere; AY}
 
 \begin{definition}
-A subcategory of the category of a triangulated category (e.g., $p$--local finite spectra) is \textit{thick} if\ldots\todo{Do triangulated categories come with weak equivalences?} \todo{Lurie's definition (lecture 26) doesn't talk about weak equivalences.}
+A full subcategory of a triangulated category (e.g., the homotopy category of $p$--local finite spectra) is \textit{thick} if\ldots\todo{there's an issue here because triangulated categories don't have weak equivalences - in any case, these are isomorphisms because we're talking about the homotopy category.  However, 2 of 3 should imply that it's closed under isomorphism.  You could either say the full subcategory is triangulated (i.e. has 0 and 2 of 3) and closed under retracts, or just state this for full subcategories of the category/homotopy category of p-local finite spectra since that's where all the relevant examples are; AY}
 \begin{itemize}
 \item \ldots it is closed under weak equivalences.
 \item \ldots it is closed under retracts.
@@ -845,32 +845,32 @@ A subcategory of the category of a triangulated category (e.g., $p$--local finit
 \noindent Examples of thick subcategories include:
 \begin{itemize}
 \item The category $\CatOf{C}_d$ of $p$--local finite spectra which are $K(d-1)$--acyclic.  (For instance, if $d = 1$, the condition of $K(0)$--acyclicity is that the spectrum have purely torsion homotopy groups.)  These are called ``finite spectra of type at least $d$''.
-\item The category $\CatOf{D}_d$ of $p$--local finite spectra $F$ which have a self-map $v: \Susp^N F \to F$, $N \gg 0$, inducing multiplication by a unit in $K(d)$--homology.  These are called ``$v_d$--self--maps''.
+\item The category $\CatOf{D}_d$ of $p$--local finite spectra $F$ which have a self-map $v: \Susp^N F \to F$, $N \gg 0$ inducing multiplication by a unit in $K(d)$--homology.  These are called ``$v_d$--self--maps''.\todo{Doesn't $v$ have to be nilpotent in the other $K(m)$'s? AY}
 \end{itemize}
 
 Ravenel shows the following useful result interrelating the $\CatOf C_d$:
 \begin{lemma}[{\cite[Theorem 2.11]{RavenelLocalizationWRTPeriodic}}]\label{CdCategoriesNest}
 For $X$ a finite complex, there is a bound \[\dim K(d-2)_* X \le \dim K(d-1)_* X.\]  In particular, there is an inclusion $\CatOf C_{d-1} \subseteq \CatOf C_d$. \qed
-\end{lemma}
+\end{lemma}\todo{as an extension of what we talked briefly about today, I suppose this is the fact that the stalk dimension of a coherent sheaf is upper semi-continuous; maybe this is worth adding in. AY}
 
 Hopkins and Smith show the following classification theorem:
 
 \begin{theorem}[{\cite[Theorem 7]{HopkinsSmith}}]
-Any thick subcategory $\CatOf C$ of $p$--local finite spectra must be $\CatOf C_d$ for some finite $d$.
+Any thick subcategory $\CatOf C$ of the category of $p$--local finite spectra must be $\CatOf C_d$ for some finite $d$.
 \end{theorem}
 \begin{proof}
-Since $\CatOf C_d$ are nested by \Cref{CdCategoriesNest} and they form an exhaustive filtration\todo{Why do you not need $\CatOf C_\infty$ for this?}, it is thus sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Write $R$ for the endomorphism ring spectrum $R = F(X, X)$, and write $F$ for the fiber of its unit map: \[F \xrightarrow{f} \S \xrightarrow{\eta_R} R.\]  Finally, let $Y$ be \emph{any} finite spectrum of type at least $d$.
+Since $\CatOf C_d$ are nested by \Cref{CdCategoriesNest} and they form an exhaustive filtration\todo{Why do you not need $\CatOf C_\infty$ for this?}, it is thus sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Write $R$ for the endomorphism ring spectrum $R = F(X, X)$, and write $F$ for the fiber of its unit map: \[F \xrightarrow{f} \S \xrightarrow{\eta_R} R.\]  Finally, let $Y$ be \emph{any} finite spectrum of type at least $d$.  It suffices to show $Y\in \CatOf C$.  
 
 Now consider applying $K(n)$--homology (for \emph{arbitrary} $n$) to the map \[1 \sm f\co Y \sm F \to Y \sm \S.\]  The induced map is always zero:
 \begin{itemize}
-\item In the case that $K(n)_* X$ is nonzero, then $K(n)_* \eta_R$ is injective\todo{Recall, $K(n)_* \mathbb{S}$ has rank 1.} and $K(n)_* f$ is zero.
-\item In the case that $K(n)_* X$ is zero, then $n \le d$\todo{In class you eventually decided on $n < d$.} and, because of the bound on type, $K(n)_* Y$ is zero as well.\todo{Do we need $X$ to be exactly of type $d$ to make this conclusion?}
+\item In the case that $K(n)_* X$ is nonzero, then $K(n)_* \eta_R$ is injective because $K(n)_*$ is a graded field, and so $K(n)_* f$ is zero.
+\item In the case that $K(n)_* X$ is zero, then $n \le d$ and, because of the bound on type, $K(n)_* Y$ is zero as well.
 \end{itemize}
 By a small variant of local nilpotence detection (\Cref{LocalNilpotenceDetection}, \cite[Corollary 2.5]{HopkinsSmith}), it follows for $j \gg 0$ that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null-homotopic.  Hence, one can calculate the cofiber to be \[\operatorname{cofib}\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \operatorname{cofib} f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract of this cofiber.
 
 We now work to show that this smash product lies in the thick subcategory $\CatOf C$ of interest.  First, note that $X \sm Z$ lies in $\CatOf C$ for any finite complex $Z$, since $Z$ can be expressed as a finite gluing diagram of spheres and smashing this through with $X$ expresses $X \sm Z$ as the iterated cofiber of maps with source and target in $\CatOf C$.  Next, consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (j-1)} \xrightarrow{f \sm 1} \S \sm F^{\sm (j-1)} \xrightarrow{1 \sm f^{\sm (j-1)}} \S \sm \S^{\sm (j-1)}\] begets a cofiber sequence\todo{Is this sequence backwards? (Note that it doesn't matter: you can just write the factorization in the other order...)} \[F \sm \operatorname{cofib} f^{\sm (j-1)} \to \operatorname{cofib} f^{\sm j} \to \operatorname{cofib} f \sm \S^{\sm (j-1)}.\]
 
-Now turn an eye toward induction.  Noting that $\operatorname{cofib}(f) = R = X \sm DX$ \todo{Recall, $f$ is the fiber of the $\eta_R$.} lies in $\CatOf C$, we can use the $2$-out-of-$3$ property on the octahedral sequence to see that $\operatorname{cofib}(f^{\sm j})$ lies in $\CatOf C$.  It follows that $Y \sm \operatorname{cofib}(f^{\sm j})$ also lies in $\CatOf C$, and using the retraction $Y$ belongs to $\CatOf C$ as well.
+Now turn an eye toward induction.  Noting that $\operatorname{cofib}(f) = R = X \sm DX$ lies in $\CatOf C$, we can use the $2$-out-of-$3$ property on the octahedral sequence to see that $\operatorname{cofib}(f^{\sm j})$ lies in $\CatOf C$.  It follows that $Y \sm \operatorname{cofib}(f^{\sm j})$ also lies in $\CatOf C$, and using the retraction $Y$ belongs to $\CatOf C$ as well.
 \end{proof}
 
 As an application of this classification, they also show the following considerably harder theorem:
@@ -950,7 +950,7 @@ In the case when $R$ models the inclusion of the deformation space around the po
 \operatorname{id} \to L_d \to L_{d-1}, & & \operatorname{id} \to L_d \to \widehat L_d.
 \end{align*}
 In particular, $L_d X = 0$ implies both $L_{d-1} X = 0$ and $\widehat L_d X = 0$.\todo{Also, idempotence?}
-\item The inclusion of the open substack of dimension $d-1$ into the one of dimension $d$ has relatively closed complement the point of height $d$.  Algebraically, this gives a gluing square (or Mayer-Vietoris square), and this is reflected in homotopy theory by a homotopy pullback square (or chromatic fracture square): \todo{This deserves a proof or a reference. (I spent a moment looking, and I can't actually find a nice ``old'' reference for chromatic fracture squares in the literature...)}
+\item The inclusion of the open substack of dimension $d-1$ into the one of dimension $d$ has relatively closed complement the point of height $d$.  Algebraically, this gives a gluing square (or Mayer-Vietoris square), and this is reflected in homotopy theory by a homotopy pullback square (or chromatic fracture square): \todo{This deserves a proof or a reference. (I spent a moment looking, and I can't actually find a nice ``old'' reference for chromatic fracture squares in the literature...) AY: inserted bousfield reference, should we also put a more recent reference for the general statement?  Tilman bauer has a thing that gives the proof. }
 \begin{center}
 \begin{tikzcd}
 L_d \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d \arrow{d} \\
@@ -974,7 +974,7 @@ X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \prod_
 X_{\Q} \arrow{r} & \left( \prod_p X^\wedge_p \right)_{\Q},
 \end{tikzcd}
 \end{center}
-which is a topological instantiation of the ad\`elic decomposition of a $\Z$--module.
+which is a topological instantiation of the ad\`elic decomposition of a $\Z$--module - see \cite{Bousfield} for details in the arithmetic case.
 \end{remark}
 
 There are also considerably more complicated facts known about these functors:
