small changes/comments

--- a/mo.tex
+++ b/mo.tex
@@ -423,7 +423,7 @@ The $0$--line of the Adams spectral sequence contains those elements visible to 
 Today we will focus on the algebraic input $\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X)$, which will require us to grapple with the homological algebra of comodules for a Hopf algebra.  To begin, it's both reassuring and instructive to see that homological algebra can, in fact, be done with comodules.  In the usual development of homological algebra for modules, the key observations are the existence of projective and injective modules, and there is something similar here.
 
 \begin{remark}
-Much of the results below do not rely on working with a Hopf algebra over the field $k = \F_2$.  In fact, $k$ can usually be taken to be a ring rather than a field.
+Much of the results below do not rely on working with a Hopf algebra over the field $k = \F_2$.  In fact, $k$ can usually be taken to be a ring rather than a field. More generally, the theory goes through in the context of comodules over Hopf algebroids.
 \end{remark}
 
 \begin{lemma}\citeme{Cite these. A1.1-2 in Ravenel are relevant}
@@ -467,7 +467,7 @@ The usual formula for the sheaf cohomology of a sheaf $\sheaf F$ over an $S$--sc
 We are thus moved to study derived base-change for comodules, thought of as sheaves equipped with an action by a group scheme.  In particular, we want to understand what it means to ``tensor'' two comodules together.  Unsurprisingly, the solution is dual to that for modules: tensor the two comodules together, then restrict to the elements where the coactions on either factor agree.
 
 \begin{definition}
-Given $A$--comodules $M$ and $N$, their cotensor product is defined by the coequalizer \[M \cotensor_A N \to M \otimes_k N \xrightarrow{\psi_M \otimes 1 - 1 \otimes \psi_N} M \otimes_k A \otimes_k N.\]
+Given $A$--comodules $M$ and $N$, their cotensor product is the $k$-module defined by the equalizer \[M \cotensor_A N \to M \otimes_k N \xrightarrow{\psi_M \otimes 1 - 1 \otimes \psi_N} M \otimes_k A \otimes_k N.\]
 \end{definition}
 \todo{Typographical suggestion: can you use a slightly small box for the cotensor product?  It's very similar to the ``qed box''; see lemma 1.4.13.}
 
@@ -493,7 +493,7 @@ The formula for $f_* N$ is what one would guess from the formula for pushforward
 Let $M$ and $N$ be $A$--comodules with $M$ projective as a $k$--module.  Then there is an equivalence \[\CatOf{Comodules}_A(M, N) = \CatOf{Modules}_k(M, k) \cotensor_A N. \qed\]
 \end{lemma}
 
-\noindent From this, we can deduce the six--functors formula described above:
+\noindent From this, we can deduce the six--functors formula described above:\todo{so what exactly is the six-functors formula?  I thought the formalism involved showing some adjunctions between 6 functors, but it's not totally clear to me what they are}
 
 \begin{corollary}
 Let $N = N' \otimes_k A$ be a cofree comodule. Then $N \cotensor_A k = N'$.
@@ -648,7 +648,7 @@ Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change
 Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading\todo{How?}, we thus deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
 \end{proof}
 
-This is pretty remarkable: some big statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  \todo{Is there a reason we should expect this, even in hindsight?}We could close here, but there's an easy homotopical consequence of this fact that is worth recording before we leave:
+This is pretty remarkable: some big statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  \todo{Is there a reason we should expect this, even in hindsight? like is MO an $HF_2$ module spectrum a priori?}We could close here, but there's an easy homotopical consequence of this fact that is worth recording before we leave:
 
 \begin{lemma}
 $MO$ splits as a wedge of shifts of $H\F_2$.
