some potential references

--- a/finite.tex
+++ b/finite.tex
@@ -7,15 +7,14 @@
 
 \todo{still need to talk about closed and open subschemes, their basic properties}
 
-\todo{Do you need to come to grips with ind-coherent sheaves?  Hovey has a paper called \text{Homotopy theory of comodules over a Hopf algebroid} where he defines the stable category of a Hopf algebroid, which is sort of about this perspective --- making $BP_*$ into a compact object in a reasonable category of $BP_* BP$--comodules.}
-
 \todo{Callan wrote something at http://chat.stackexchange.com/transcript/message/28980387\#28980387 which addresses the unicity of the formal group attached to a local number field. I thought I drew an analogy to that somewhere in here, but now I can't find it. I would like to.}
+
 
 
 \section{The context of a spectrum}\label{StableContextLecture}
 \citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
 
-\todo[inline]{I don't think I mention Hopf algebroids during this lecture! This is a miserable oversight that \emph{must} be corrected.  Also, I should mention the cotensor product for Hopf algebroids. Update by d.s.: fixed. My reference was appendix I of Ravenel.  Feel free to delete anything you think is unnecessary for our purposes.  I think some of the homological algebra near the end can be left out.  }
+\todo[inline]{I don't think I mention Hopf algebroids during this lecture! This is a miserable oversight that \emph{must} be corrected.  Also, I should mention the cotensor product for Hopf algebroids. Update by d.s.: fixed. My reference was appendix I of Ravenel.  Feel free to delete anything you think is unnecessary for our purposes.  I think some of the homological algebra near the end can be left out.}
 
 \begin{definition} A \textit{Hopf Algebroid} over a commutative ring $ K$ is a pair $ (A, \Gamma)$ of commutative $ K$-algebras with structure maps such that for any other commutative $ K$-algebra $ B$, the sets $ \text{Hom}(A, B)$ and $ \text{Hom}(\Gamma, B)$ are the objects and morphisms of a groupoid.  The structure maps are
 
@@ -184,7 +183,7 @@ A \arrow{rr}{i} \arrow{rd}{j} & & X \\
 \end{tikzcd}
 \end{center}
 \todo{You haven't defined $X^\wedge_A$ at this point.}
-If $X$ is Noetherian, then $k^*$ is flat as a functor of sheaves, $j^*$ is conservative as a functor in the derived category of sheaves, and there is an equivalence of derived categories of sheaves over $X^\wedge_A$ and sheaves over the descent object $\sheaf D_{A \to X}$.\todo{Surely you're supposed to be saying ``bounded'' sometimes when you talk about the derived category.} \qed
+If $X$ is Noetherian, then $k^*$ is flat as a functor of sheaves, $j^*$ is conservative as a functor in the derived category of sheaves, and there is an equivalence of derived categories of sheaves over $X^\wedge_A$ and sheaves over the descent object $\sheaf D_{A \to X}$.\todo{Surely you're supposed to be saying ``bounded'' sometimes when you talk about the derived category.}\todo{Do you need to come to grips with ind-coherent sheaves?  Hovey has a paper called \text{Homotopy theory of comodules over a Hopf algebroid} where he defines the stable category of a Hopf algebroid, which is sort of about this perspective --- making $BP_*$ into a compact object in a reasonable derived category of $BP_* BP$--comodules.  You might also be interested in Hovey's \textit{Chromatic phenomena in the algebra of $BP_* BP$--comodules} in the Elliptic Cohomology LMS volume.} \qed
 \end{theorem}
 
 \begin{remark}\todo{Is this true? Ha, well, I hope so.}
