--- a/sigma.tex
+++ b/sigma.tex
@@ -9,6 +9,8 @@
 
 \todo[inline]{An artifact of these being lecture notes for an actual class is that this last section is getting compressed due to end-of-semester time constraints.  I think a published version of these notes would contain proofs of a bunch of these facts which, at present, are getting omitted either because the proofs take too long or because simply understanding the theorem statements takes too long.  Really, the class in general is becoming quite strained at this point: it's hard to keep everything straight both for the students and for the teacher.}
 
+\todo{Jack has a paper called \textit{The motivic Thom isomorphism} in the Elliptic Cohomology LMS volume where he discusses some pretty interesting perspectives on genera.  Could be worth mentioning as a ``further reading'' sort of thing, at least.}
+
 
 
 
