some more to-dos
an example, a remark about cusp forms

--- a/mo.tex
+++ b/mo.tex
@@ -530,6 +530,11 @@ Consider the degenerate case $X = H\F_2$.  Then $H\F_{2*}(H\F_2) = \mathcal A_*$
 \end{example}
 
 \begin{example}
+\todo{The ordering of these examples probably isn't great, but the ASS pictures should appear on consecutive pages.}
+\todo{Mike Hill and Catherine's working of the Adams spectral sequence for $kO$.}
+\end{example}
+
+\begin{example}
 At the other extreme, we can pick the extremely nondegenerate case $X = \S$, pictured through a range in \Cref{HF2ASSFigure}.\todo{Label elements?  Identify some groups?}
 \begin{landscape}
 \begin{figure}[b]
