reading material for Chapter 6

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -35,6 +35,8 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 
 \todo[inline]{Yifei warned me that Matt's ``there exists a unique coordinate...''\ Lemma is specifically about lifting the \emph{Honda} formal group law over $\F_q$.  If you want to do this with elliptic cohomology or something, then you need a stronger statement (and it's clear what this statement should be, but no one has proven it).}
 
+\todo{This MO conversation looks interesting: http://chat.stackexchange.com/transcript/message/29465746\#29465746.}
+
 
 ------ Here are various notes from conversations with Nat, recorded and garbled well after they happened. ------
 
