Fixed diagram formatting

--- a/finite.tex
+++ b/finite.tex
@@ -200,9 +200,9 @@ Correspondingly, to any spectrum $X$ we can define the following cosimplicial sp
 Let $\sheaf D_E(X)$ be the cosimplicial spectrum determined by the formula
 \[\mathcal{D}_E(X) := \left\{
 \begin{tikzcd}
-\begin{array}{c} E \\ \sm \\ X \end{array} \arrow[leftarrow, shift left=\baselineskip]{r}{\mu} \arrow[shift left=(2*\baselineskip)]{r}{\eta_L} \arrow{r}{\eta_R} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r}{\Delta} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} &
+\begin{array}{c} E \\ \sm \\ X \end{array} \arrow[leftarrow]{r}{\mu} \arrow[shift left=(\baselineskip)]{r}{\eta_L} \arrow[shift right=\baselineskip]{r}{\eta_R} &
+\begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=(\baselineskip)]{r} \arrow{r}{\Delta} \arrow[leftarrow, shift right=(\baselineskip)]{r} \arrow[shift right=(2*\baselineskip)]{r} &
+\begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=(\baselineskip)]{r} \arrow[leftarrow]{r} \arrow[shift right=(\baselineskip)]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r} \arrow[shift right=(3*\baselineskip)]{r} &
 \cdots
 \end{tikzcd}
 \right\}.\]
