update the intro

--- a/main.bib
+++ b/main.bib
@@ -692,6 +692,25 @@ MRREVIEWER = {Paul G. Goerss},
        URL = {http://dx.doi.org/10.4007/annals.2010.171.491},
 }
 
+@article {Ochanine,
+    AUTHOR = {Ochanine, Serge},
+     TITLE = {Sur les genres multiplicatifs d\'efinis par des int\'egrales
+              elliptiques},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {26},
+      YEAR = {1987},
+    NUMBER = {2},
+     PAGES = {143--151},
+      ISSN = {0040-9383},
+     CODEN = {TPLGAF},
+   MRCLASS = {57R75 (55N22 57R99)},
+  MRNUMBER = {895567},
+MRREVIEWER = {P. S. Landweber},
+       DOI = {10.1016/0040-9383(87)90055-3},
+       URL = {http://dx.doi.org/10.1016/0040-9383(87)90055-3},
+}
+
 @article {Quillen,
     AUTHOR = {Quillen, Daniel},
      TITLE = {Elementary proofs of some results of cobordism theory using
@@ -840,12 +859,42 @@ MRREVIEWER = {Donald M. Davis},
 MRREVIEWER = {R. G. Larson},
 }
 
+@article {Singer,
+    AUTHOR = {Singer, William M.},
+     TITLE = {Connective fiberings over {${\rm BU}$} and {${\rm U}$}},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {7},
+      YEAR = {1968},
+     PAGES = {271--303},
+      ISSN = {0040-9383},
+   MRCLASS = {55.50},
+  MRNUMBER = {0232392},
+MRREVIEWER = {A. H. Clark},
+}
+
 @misc{stacks-project,
   shorthand    = {Stacks},
   author       = {The {Stacks Project Authors}},
   title        = {\textit{Stacks Project}},
   howpublished = {\url{http://stacks.math.columbia.edu}},
   year         = {2014},
+}
+
+@article {Stong,
+    AUTHOR = {Stong, Robert E.},
+     TITLE = {Determination of {$H^{\ast} ({\rm BO}(k,\cdots,\infty
+              ),Z_{2})$}\ and {$H^{\ast} ({\rm BU}(k,\cdots,\infty
+              ),Z_{2})$}},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {107},
+      YEAR = {1963},
+     PAGES = {526--544},
+      ISSN = {0002-9947},
+   MRCLASS = {55.99},
+  MRNUMBER = {0151963},
+MRREVIEWER = {H. Wada},
 }
 
 @misc{StricklandBottPeriodicity,
@@ -940,6 +989,39 @@ MRREVIEWER = {W. Stephen Wilson},
    MRCLASS = {55N22 (55P20 55P42 55Q45 55S25)},
   MRNUMBER = {655040 (83j:55005)},
 MRREVIEWER = {Franklin P. Peterson},
+}
+
+@article {WittenEllipticGeneraQFT,
+    AUTHOR = {Witten, Edward},
+     TITLE = {Elliptic genera and quantum field theory},
+   JOURNAL = {Comm. Math. Phys.},
+  FJOURNAL = {Communications in Mathematical Physics},
+    VOLUME = {109},
+      YEAR = {1987},
+    NUMBER = {4},
+     PAGES = {525--536},
+      ISSN = {0010-3616},
+     CODEN = {CMPHAY},
+   MRCLASS = {57R90 (11F11 55N20 58G05 58G10)},
+  MRNUMBER = {885560},
+MRREVIEWER = {J. Stasheff},
+       URL = {http://projecteuclid.org/euclid.cmp/1104117076},
+}
+
+@incollection {WittenIndexDiracOperatorLoopSpace,
+    AUTHOR = {Witten, Edward},
+     TITLE = {The index of the {D}irac operator in loop space},
+ BOOKTITLE = {Elliptic curves and modular forms in algebraic topology
+              ({P}rinceton, {NJ}, 1986)},
+    SERIES = {Lecture Notes in Math.},
+    VOLUME = {1326},
+     PAGES = {161--181},
+ PUBLISHER = {Springer, Berlin},
+      YEAR = {1988},
+   MRCLASS = {58G12 (81E30)},
+  MRNUMBER = {970288},
+       DOI = {10.1007/BFb0078045},
+       URL = {http://dx.doi.org/10.1007/BFb0078045},
 }
 
 @article {Yagita,
