clean up most of the todo notes in Lecture 1.1

--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 
 \mainmatter
 
-\include{intro}
+% \include{intro}
 
 
 
@@ -52,15 +52,15 @@
 
 \include{mo}
 
-\include{quillen}
+% \include{quillen}
 
-\include{finite}
+% \include{finite}
 
-\include{cooperations}
+% \include{cooperations}
 
-\include{sigma}
+% \include{sigma}
 
-\include{hinfty}
+% \include{hinfty}
 
 
 \appendix
