remark about ‘allowable’ monomials in the R-W E_* BP_* computation

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -326,6 +326,7 @@ Next time, we will investigate $F_* \OS{E}{*}$ in the more modest and concrete s
 
 \section{Complex-orientable cooperations}\label{COableCoopnsII}
 \todo{Jeremy found a paper (Chan's \textit{A simple proof that the unstable (co-)homology of the Brown--Peterson spectrum is torsion-free}, see also Wilson's Primer's Section 10) where $H_* \OS{BP}{2*}$ is proven to be bipolynomial (and even!) without any Hopf ring rigamarole. It looks like the method of proof is not very different from the Hopf ring one, but it's much shorter... and maybe the result will fall out of the Dieudonne module calculations anyhow?  Consider it as an option after you break this lecture in two.}
+\todo{Ravenel and Wilson also tell you how to get a basis of $\ast$--indecomposables, which they call ``allowable'' monomials.  Might be worth mentioning.}
 \citeme{Pages 266--270 of Ravenel--Wilson, especially the bottom of 268.}
 
 \begin{center}
