clean up Lecture 1.3

--- a/main.bib
+++ b/main.bib
@@ -674,6 +674,17 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1016/S0022-4049(01)00017-2},
 }
 
+@book {MosherTangora,
+    AUTHOR = {Mosher, Robert E. and Tangora, Martin C.},
+     TITLE = {Cohomology operations and applications in homotopy theory},
+ PUBLISHER = {Harper \& Row, Publishers, New York-London},
+      YEAR = {1968},
+     PAGES = {x+214},
+   MRCLASS = {55.40},
+  MRNUMBER = {0226634},
+MRREVIEWER = {Larry Smith},
+}
+
 @article {Nave,
     AUTHOR = {Nave, Lee S.},
      TITLE = {The {S}mith-{T}oda complex {$V((p+1)/2)$} does not exist},
