--- a/mo.tex
+++ b/mo.tex
@@ -5,7 +5,7 @@
 
 
 
-This Case Study culminates in the calculation of $MO_*(*)$, the bordism ring of unoriented manifolds, but we mainly take this as an opportunity to introduce several key concepts that will serve us throughout the book.  First and foremost, we will require a definition of bordism spectrum that we can manipulate computationally, using just the tools of abstract homotopy theory.  Once that is established, we immediately begin to bring algebraic geometry into the mix: the main idea is that the cohomology ring of a space is better viewed as a scheme (with plenty of extra structure), and the homology groups of a spectrum are better viewed as representation for a certain highly elaborate algebraic structure group.  This data finds expression in familiar homotopy theory: we show that a form of group cohomology for this representation forms the input to the classical Adams spectral sequence.  Finally, we calculate this representation structure for $H\F_{2*} MO$, find that it is suitably free, and thereby gain control of the Adams spectral sequence computing $MO_*(*)$.\todo{Thread Crefs to the relevant theorems below through this introduction.}
+This Case Study culminates in the calculation of $MO_*(*)$, the bordism ring of unoriented manifolds, but we mainly take this as an opportunity to introduce several key concepts that will serve us throughout the book.  First and foremost, we will require a definition of bordism spectrum that we can manipulate computationally, using just the tools of abstract homotopy theory.  Once that is established, we immediately begin to bring algebraic geometry into the mix: the main idea is that the cohomology ring of a space is better viewed as a scheme (with plenty of extra structure), and the homology groups of a spectrum are better viewed as representation for a certain elaborate algebraic group.  This data actually finds familiar expression in homotopy theory: we show that a form of group cohomology for this representation forms the input to the classical Adams spectral sequence.  Finally, we calculate this representation structure for $H\F_{2*} MO$, find that it is suitably free, and thereby gain control of the Adams spectral sequence computing $MO_*(*)$.\todo{Thread Crefs to the relevant theorems below through this introduction.}
 
 
 
@@ -257,7 +257,7 @@ Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$
 
 Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
 
-\begin{definition}
+\begin{definition}\label{HF2SchemeForFiniteCplx}
 Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite--dimensional as an $\F_2$--vector space.  We will write \[X_{H\F_2} = \Spec H\F_2^* X\] for the corresponding finite affine scheme.
 \end{definition}
 
@@ -292,19 +292,19 @@ and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is ex
 
 \section{The Steenrod algebra}\label{TheSteenrodAlgebraSection}
 
-We left off yesterday with an ominous finiteness condition in our definition of $X_{H\F_2}$, and we produced a pair of reasonable guesses as to what ``$\RP^\infty_{H\F_2}$'' could mean.  It will turn out that we can answer which of the two guesses is reasonable by rigidifying the target category somewhat.  Here are the extra structures we will work toward incorporating:
+We left off in the previous section with an ominous finiteness condition in \Cref{HF2SchemeForFiniteCplx}, and we produced a pair of reasonable guesses as to what ``$\RP^\infty_{H\F_2}$'' could mean in \Cref{RPExampleFaulty}.  We will decide which of the two guesses is reasonable by rigidifying the target category so as to incorporate the following extra structures:
 \begin{enumerate}
 \item Cohomology rings are \emph{graded}, and maps of spaces respect this grading.
 \item Cohomology rings receive an action of the Steenrod algebra, and maps of spaces respect this action.
-\item Both of these are complicated further when taking the cohomology of an infinite complex.
+\item Both of these are made somewhat more complicated when taking the cohomology of an infinite complex.
 \item \label{SkewCommutativeDeficiency} (Cohomology rings for more elaborate cohomology theories are only skew-commutative, but ``$\Spec$'' requires a commutative input.)
 \end{enumerate}
-Today we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which doesn't matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the semester.
+Today we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which doesn't matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the book.
 
-Let's begin by considering the grading on $H\F_2^* X$.  In algebraic geometry, the following standard construction is used to track gradings:
+Let's begin by considering the grading on $H\F_2^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:
 
-\begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]\todo{Maybe ``$\Z$--filtering'' is more appropriate.}
-A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.
+\begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]
+A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language that's used.}
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
@@ -314,77 +314,106 @@ A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an actio
 A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map \[\alpha^*: R \to R \otimes \F_2[x^\pm].\]  Define $R_k$ to be those points in $r$ satisfying $\alpha^*(r) = r \otimes x^k$.  It is clear that we have $1 \in R_0$ and that $R_j R_k \subseteq R_{j+k}$.  To see that $R = \bigoplus_k R_k$, note that every tensor can be written as a sum of pure tensors.  Conversely, given a graded ring $R$, define the coaction map on $R_k$ by \[(r_k \in R_k) \mapsto x^k r_k\] and extend linearly.
 \end{proof}
 
-This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, as it is designed to deal with things like polynomial rings (where the difference of two polynomials can lie in lower degree), but in classical algebraic topology we only ever encounter sums of terms with homogeneous degree.  We can modify our perspective very slightly to arrive at the algebraic geometers': replace $H\F_2$ by the periodified spectrum \[H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2.\]  This spectrum has the property that $H\F_2P^0(X)$ is isomorphic to $H\F_2^*(X)$ as ungraded rings, but now we can make sense of the sum of two classes which used to live in different $H\F_2$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ so that we are in the situation of \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
+This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, essentially because the algebraic topologist's ``cohomology ring'' is not \emph{really} a ring at all --- one is only allowed to consider sums of homogeneous degree elements.  This restriction stems directly from the provenance of cohomology rings: recall that \[H\F_2^n X := \pi_{-n} F(\Susp^\infty_+ X, H\F_2).\]  One can only form sums internal to a \emph{particular} homotopy group, using the cogroup structure on $\S^{-n}$.  On the other hand, the most basic ring of algebraic geometry is the polynomial ring, and hence their notion is adapted to handle, for instance, the potential degree drop when taking the difference of two (nonhomogeneous) polynomials of the same degree.
 
-\todo{You can do a better job of describing where the Steenrod coaction comes from, rather than resting on duality.  For instance, you could at least justify \emph{why the Steenrod algebra is a Hopf algebra}.  Already, that's kind of unclear.}
-Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra is a \emph{noncommutative} algebra, and so the action map \[\mathcal A^* \otimes H\F_2^* X \to H\F_2^* X\] will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, since the Cartan formula expressing the diagonal on $\mathcal A^*$ is evidently symmetric: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]
-\todo{Reminder for jhfung: $\mathcal A^*$ is a Hopf algebra with comultiplication $\Sq^n \mapsto \sum_{i + j = n} \Sq^i \otimes \Sq^j$, so $\mathcal{A}_*$ is also a Hopf algebra.}  Second, if $X$ is a \emph{finite} complex, then tinkering with Spanier--Whitehead duality
-\todo{I see that if $X$ is a finite complex, it has a Spanier--Whitehead dual, but I don't see how to use this.  Is $\lambda^*$ not just the composition $H\mathbb{F}_2^* X = \mathbb{F}_2 \otimes H\mathbb{F}_2^* X \to H\mathbb{F}_2^* X \otimes \mathcal A^* \otimes \mathcal A_* \xrightarrow{\lambda \otimes 1} H\mathbb{F}_2^* X \otimes \mathcal{A}_*$?}
-\todo{I think the point is you're using a duality-type thing for $\mathcal A_*$ and $\mathcal A^*$.  Unfortunately, infinite dimensional vector spaces are not dualizable, so strictly what you've written doesn't quite work (for example, $\mathcal A^*\otimes \mathcal A_*$ doesn't receive a map from $\mathbb{F}_2$).  However, on finite complexes, you only get a finite dimensional part of the Steenrod algebra acting non-trivially, so you can do the duality thing. AY}
-gives rise to a coaction map \[\lambda^*: H\F_2^* X \to H\F_2^* X \otimes \mathcal A_*,\] which we will then re-interpret as an action map \[\alpha: \Spec \mathcal A_* \times X_{H\F_2} \to X_{H\F_2}.\]  Milnor works out the Hopf algebra structure of $\mathcal A_*$, by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j.\]  Notice that we can take the limit $n \to \infty$ to get a well-defined infinite sum, provided we permit ourselves to make sense of such a thing.  He then makes the following calculation, stable in $n$:
+We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $H\F_2$ with the periodified spectrum \[H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2.\]  This spectrum becomes a ring in the homotopy category by using the factorwise-defined multiplication maps \[\Susp^j H\F_2 \sm \Susp^k H\F_2 \simeq \Susp^{j+k} (H\F_2 \sm H\F_2) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} H\F_2.\]  This spectrum has the property that $H\F_2P^0(X)$ is isomorphic to $\bigoplus_n H\F_2^n(X)$ as ungraded rings, but now we can make topological sense of the sum of two classes which used to live in different $H\F_2$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
+
+Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra arises as the homotopy endomorphisms of $H\F_2$ and so is a \emph{noncommutative} algebra.  In turn, the action map
+\begin{center}
+\begin{tikzcd}
+\mathcal A^* \otimes H\F_2^* X \arrow{r} \arrow[equal]{d} & H\F_2^* X \arrow[equal]{d} \\
+{[H\F_2, H\F_2]_*} \otimes {[X, H\F_2]_*} \arrow["\circ"]{r} & {[X, H\F_2]}
+\end{tikzcd}
+\end{center}
+will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the Steenrod algebra is a Hopf algebra\footnote{The construction of both the Hopf algebra diagonal here and the coaction map below is somewhat ad hoc.  We will give a more robust presentation in \Cref{FHGivesComodules}.}\todo{Make sure this Cref points to the right place.}, using the map \[[H\F_2, H\F_2]_* \xrightarrow{\mu^*} [H\F_2 \sm H\F_2, H\F_2]_* \cong [H\F_2, H\F_2]_* \otimes [H\F_2, H\F_2]_*\] as the diagonal.  This Hopf algebra structure is actually cocommutative --- this is a rephrasing of the symmetry of the Cartan formula: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]  It follows that the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, and hence $\Spec \mathcal A_*$ would make a reasonable algebro-geometric object.
+
+Second, we want to identify the role of $\mathcal A_*$ in acting on $H\F_2^* X$.  By assuming that $X$ is a finite complex, we can write it as the Spanier--Whitehead dual $X = DY$ of some other finite complex $Y$.  Starting with the action map on $H\F_2^* Y$:
+\begin{align*}
+\mathcal A^* \otimes H\F_2^* Y & \to H\F_2^* Y \\
+\intertext{we take the $\F_2$--linear dual to get a coaction map}
+\mathcal A_* \otimes H\F_{2*} Y & \from H\F_{2*} Y, \\
+\intertext{then use $X = DY$ to return to cohomology}
+\mathcal A_* \otimes H\F_2^* X & \xleftarrow{\lambda^*} H\F_2^* X. \\
+\intertext{Finally, we re-interpret this as an action map}
+\Spec \mathcal A_* \times X_{H\F_2} & \xrightarrow{\alpha} X_{H\F_2}.
+\end{align*}
+
+Having produced the action map $\alpha$, we are now moved to study $\alpha$ as well as the structure group $\Spec \mathcal A_*$ itself.  Milnor works out the Hopf algebra structure of $\mathcal A_*$ by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in $H\F_2^* \RP^n$)}.\]  Noticing that we can take the limit $n \to \infty$ to get a well-defined infinite sum, he then makes the following calculation, stable in $n$:
 \begin{align*}
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coassociativity)} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = & \text{(ring homomorphism)} \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(characteristic $2$)}.
-\end{align*}
-Then, turning to the right-hand side:
-\begin{align*}
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(characteristic $2$)}. \\
+\intertext{Then, turning to the right-hand side:}
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
 \end{align*}
 from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]  Finally, Milnor shows that this is the complete story:
-\begin{theorem}[Milnor]\citeme{Give a reference in Milnor's paper}\todo{Mosher and Tangora also has a proof of this on pp. 50--52.}
+\begin{theorem}[{Milnor~\cite[Theorem 2]{Milnor}, \cite[Chapter 6]{MosherTangora}}]
 $\mathcal A_* = \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots]$.
 \end{theorem}
 \begin{proof}[Flippant proof]
 There is at least a map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ given by the definition of the elements $\xi_j$ above.  This map is injective, since these elements are distinguished by how they coact on $H\F_2^* \RP^\infty$.  Then, since these rings are of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableSteenrodCoops}), and noting that he has exactly enough.
 \end{proof}
 
-We are now in a position to uncover the desired map $\alpha^*$ desired earlier.  Suppose that we were interested in re-telling Milnor's story with $H\F_2P$ in place of $H\F_2$.  The dual Steenrod algebra is defined topologically by \[\mathcal A_* := \pi_*(H\F_2 \sm H\F_2),\] which we replace by \[\mathcal AP_0 := \pi_0 (H\F_2 P \sm H\F_2 P) = H\F_2P_0(H\F_2 P) = \mathcal A_*[\xi_0^\pm].\]
-\todo{I think it's a good idea to at least mention that $\xi_0$ keeps track of the grading, as you explained in class.  Also, I see from the wedge axiom that $H\F_2 P_0(H\F_2 P) \cong \prod_j \mathcal A_*$, but how do you get the multiplicative structure of $\xi_0$?}
+We are now in a position to uncover the desired map $\alpha^*$ from earlier.  In order to retell Milnor's story with $H\F_2P$ in place of $H\F_2$, note that there is a topological construction involving $H\F_2$ from which $\mathcal A_*$ emerges: \[\mathcal A_* := \pi_*(H\F_2 \sm H\F_2).\]  Performing substitution on this formula gives the periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (H\F_2 P \sm H\F_2 P) = H\F_2P_0(H\F_2 P) = \mathcal A_*[\xi_0^\pm].\]
 
-\begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]\todo{Include a proof of this. It doesn't seem obvious --- Danny and I spent a while talking about it and couldn't get all our algebra straight.  It has something to do with trading the invertible element across the smash product in $H\F_2P \sm H\F_2P \sm_{H\F_2P} H\F_2P \sm X$, and also with multiplicativity of the action: $\psi(v x) = \psi(v) \psi(x)$ with $v$ the homogenizing generator, or something.}
-Projecting to the quotient Hopf algebra $\mathcal AP_0 \to \F_2[\xi_0^\pm]$ gives exactly the coaction map $\alpha^*$. \qed
+\begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]
+Projecting to the quotient Hopf algebra $\mathcal AP_0 \to \F_2[\xi_0^\pm]$ gives exactly the coaction map $\alpha^*$.
 \end{lemma}
+\begin{proof}[Calculation]
+\todo{This could be clearer.}
+Starting with an auxiliary cohomology class $x \in H\F_2^n(X)$, we produce a homogenized cohomology class $x \cdot u^n \in H\F_2P^0(X)$.  Under the coaction map, this is sent to
+\begin{center}
+\begin{tikzcd}
+H\F_2P^0(X) \arrow["\alpha^*"]{r} & H\F_2P^0(X) \otimes \mathcal AP_0 \arrow{r} & H\F_2P^0(X) \otimes \F_2[\xi_0^\pm] \\
+x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
+\end{tikzcd}
+\end{center}
+Applying \Cref{GradedAndGmEquivAgree} to this coaction thus selects the original degree $n$ classes.
+\end{proof}
 
-\todo{The point of this lemma is to say that earlier we traded saying ``graded map'' for ``$\Gm$--equivariant map'', which did not seem like a substantial gain.  Now we see that saying ``Steenrod--equivariant map'' already includes saying ``graded map'', which is a gain in brevity.  Try to make this clearer.}
-
-To study the rest of $\mathcal AP_0$ in terms of algebraic geometry, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[H\F_2^* \RP^\infty \otimes H\F_2^* \RP^\infty \leftarrow H\F_2^* \RP^\infty.\]  Taking a colimit over finite complexes, we produce an coaction of $\mathcal A_*$, and since the map above comes from a map of spaces, it is equivariant for the coaction.  Since the action on the left is diagonal, we deduce the formula \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
+Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[H\F_2^* \RP^\infty \otimes H\F_2^* \RP^\infty \leftarrow H\F_2^* \RP^\infty.\]  Taking a colimit over finite complexes, we produce an coaction of $\mathcal A_*$, and since the map above comes from a map of spaces, it is equivariant for the coaction.  Since the action on the left is diagonal, we deduce the formula \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
-The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2). \qed\]
+The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2).\]
 \end{lemma}
-\todo{Can you explain this more?  In which sense is $\lambda^*(x)$ universal?  How do I get from the first statement to the second?}
+\begin{proof}
+Given a point $f \in (\Spec \mathcal AP_0)(T)$, we extract such a series by setting \[\lambda^*_f(x) = \sum_{j=0}^\infty f(\xi_j) x^{2^j} \in T\ps{x}.\]  Conversely, any series $\lambda(x)$ satisfying this homomorphism property must have nonzero terms appearing only in integer powers of $2$, and hence we can construct a point $f$ by declaring that $f$ sends $\xi_j$ to the $(2^j)${\th} coefficient of $\lambda$.
+\end{proof}
 
 We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{H\F_2}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{H\F_2}$ Milnor's technique was to consider the ind-system $\{\RP^n_{H\F_2}\}_{n=0}^\infty$ of finite affine schemes.  We will record this as our technique to handle general infinite complexes:
 \begin{definition}
-When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.\footnote{More canonically, when $X$ is ``compactly generated'', it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we define $X_{H\F_2}$ using the ind-system $\{X^{(\alpha)}_{H\F_2}\}_\alpha$.}
+When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.\footnote{More canonically, when $X$ is ``compactly generated'', it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we define $X_{H\F_2}$ using the ind-system $\{X^{(\alpha)}_{H\F_2}\}_\alpha$.  Any system arising from a choice of skeletal structure is cofinal in this system, hence ind-isomorphic.}
 \end{definition}
 
-This choice collapses our uncertainty about the topological example from last time:
+This choice to follow Milnor resolves our uncertainty about the topological example from last time:
 \begin{example}[{cf.\ \Cref{FormalGaExample,RPExampleFaulty}}]\label{RPinftyExampleForReal}
 Write $\G_a$ for the ind-system $\mathbb A^{1, (n)}$ with the group scheme structure given in \Cref{RPExampleFaulty}.  That this group scheme structure filters in this way is a simultaneous reflection of two facts:
 \begin{enumerate}
 \item Algebraic: The set $\G_a(T)$ consists of all nilpotent elements in $T$.  The sum of two nilpotent elements of orders $n$ and $m$ is guaranteed to itself be nilpotent with order at most $n+m$.
-\item Topological: There is a factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$ purely for dimensional reasons.\todo{Is there an off-by-one here?}
+\item Topological: There is a factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$ purely for dimensional reasons.
 \end{enumerate}
 As group schemes, we have thus calculated \[\RP^\infty_{H\F_2} \cong \G_a.\]
 \end{example}
 
 \begin{example}
-\todo{We could be clearer about the \emph{two} things that are happening here.  First, we are comparing informal schemes to formal schemes (or polynomials to power series).  Second, we are comparing external Hom--objects to internal Hom--objects (or sets of power series over $\F_2$ to schemes of power series over $\F_2$--algebras).}
-Additionally, this convention comports with our analysis of $\Spec \mathcal AP_0$.  Note that the following morphism sets are very different:
-\begin{align*}
-\CatOf{GroupSchemes}_{/\F_2}(\mathbb G_a, \mathbb G_a) & \cong \CatOf{HopfAlgebras}_{\F_2/}(\F_2[x], \F_2[x]) \\
-\CatOf{FormalGroups}_{/\F_2}(\G_a, \G_a) & \cong \CatOf{HopfProAlgebras}_{\F_2/}(\F_2\llbracket x \rrbracket, \F_2\llbracket x \rrbracket).
-\end{align*}
-The former is populated by polynomials satisfying the homomorphism condition and the latter is populated by \emph{power series} satisfying the same, which form a much larger set.  Since our description of $\Spec \mathcal AP_0$ involves power series, we will favor the latter interpretation.  To record this, first amp up this description of maps to a scheme of its own: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}\] and conclude that the correct name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]
+Given the appearance of a homomorphism condition in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a ``hom functor'' for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a proper name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
 \end{example}
 
-Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that this language of formal schemes has an extremely good compression ratio --- you can fit a lot of information into a very tiny space.  This formula simultaneously encodes the cohomology ring of $\RP^\infty$ as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with $\InternalAut{\G_a}$.
+\begin{example}
+Remembering the slogan \[\Spec \mathcal AP_0 \cong \InternalAut \G_a\] also makes it easy to recall the structure formulas for the dual Steenrod algebra.  For instance, consider the antipode map, which has the effect on $\InternalAut \G_a$ of sending a power series to its compositional inverse.  That is: \[\sum_{j=0}^\infty \chi(\xi_j) \left( \sum_{k=0}^\infty \xi_k x^{2^k} \right)^{2^j} = \sum_{j=0}^\infty \sum_{k=0}^\infty \chi(\xi_j) \xi_k^{2^j} x^{2^{j+k}} = \sum_{n=0}^\infty \left( \sum_{j+k=n} \chi(\xi_j) \xi_k^{2^j} \right) x^{2^n} = 1,\] from which we can extract formulas like
+\begin{align*}
+\chi(\xi_0) & = \xi_0^{-1}, &
+\chi(\xi_1) & = \xi_0^{-3} \xi_1, &
+\chi(\xi_2) & = \xi_0^{-7} \xi_1^3 + \xi_0^{-5} \xi_2, &
+\ldots.
+\end{align*}
+\end{example}
 
-\todo{Include a recursive formula for the antipode map, coming from power series inversion.}
+In summary, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that this language of formal schemes has an extremely good compression ratio --- you can fit a lot of information into a very tiny space.  This formula simultaneously encodes the cohomology ring of $\RP^\infty$ as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with $\InternalAut{\G_a}$.  As a separate wonder, it is also remarkable that there is a single cohomological calculation --- that of $\RP^\infty_{H\F_2}$ --- which exerts such enormous control over mod--$2$ cohomology itself (e.g., the entire structure of the dual Steenrod algebra).  This will turn out to be a surprisingly common occurrence as we progress.
+
+
 
 
 
