added some notes from a discussion with Hood

--- a/finite.tex
+++ b/finite.tex
@@ -509,6 +509,7 @@ Every formal group law is naturally isomorphic to a $p$--typical one.
 \end{corollary}
 \begin{proof}
 The procedure applied to the formal group law $+_\phi$ in the proof of \Cref{EveryLogHaspTypification} applies equally well to an arbitrary formal group law, even without a logarithm --- it just wasn't clear what was being gained.  Now, it is clear\todo{I'm still not sure about this.  Lemma 3.3.7 doesn't say anything about $p$-series, and the previous two lemmas use the existence of a logarithm rather substantially.}: we are gaining the conclusion of this Corollary.
+\citeme{This is Lemma 6.6.3 in the crystals notes. Definitely copy this proof! It avoids invoking a logarithm, which you haven't managed to do otherwise. Additionally: this gives a proof that the $p$--series of a $p$--typical coordinate has the usual $p$--typical expression. To go the other way, a $p$--typical coordinate on a finite height formal group can't be killed by $p$ (in the curves formulation of the Dieudonn\'e module), and hence because its $p$--series is nonvanishing (and lies in $DG \subseteq C_p G \cong (DG)^{\times \infty}$) its $p$--division must as well by uniformity or reducedness or something.}
 \end{proof}
 
 \begin{remark}\label{EveryPSeriesArises}
@@ -530,6 +531,10 @@ Replace the formal group law by its $p$--typification.  Based on \Cref{RecoverLo
 \end{proof}
 
 \todo{You could be clearer about the varying assumptions on the ground rings in these different theorems.  Some need to work over $k$, others work over any $\Z_{(p)}$--algebra.}
+
+
+
+
 
 \section{The structure of $\moduli{fg}$ II: Large scales}
 
