remove to-do about filling out the HF2 Adams SS labels

--- a/mo.tex
+++ b/mo.tex
@@ -585,7 +585,7 @@ Consider the degenerate case $X = H\F_2$.  Then $H\F_{2*}(H\F_2) = \mathcal A_*$
 \end{example}
 
 \begin{example}
-At the other extreme, we can pick the extremely nondegenerate case $X = \S$, pictured through a range in \Cref{HF2ASSFigure}.\todo{Label elements?  Identify some groups?}
+At the other extreme, we can pick the extremely nondegenerate case $X = \S$, pictured through a range in \Cref{HF2ASSFigure}.
 \begin{landscape}
 \begin{figure}[b]
 \input{sseqpages/ass.tex}
